--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ span.psw {
                                     <div class="col-xl-12">
 									<div class="section_title mb-40 text-center">
                                         <h3 style="text-align:center;">Time/Phases</h3>
-                                        <img src="img/Modified_timeline.png" style="height:475px;width: 70%;" />
+                                        <img src="img/Modified_timeline_v1.png" style="height:475px;width: 60%;" />
                                     </div>
 									</div>
                                 </div>
