--- a/document.html
+++ b/document.html
@@ -252,7 +252,7 @@ tr:nth-child(even) {
                     <td><p>Consent</p></td>
                     <td>
                        
-                                <button class="btn"><i class="fa fa-download"></i><a href="img/HES_consent.pdf" target="_blank" style="color:white;"> Download </a></button>
+                                <button class="btn"><i class="fa fa-download"></i><a href="img/smartsurvey_consent_IRB_Tamil_website.pdf" target="_blank" style="color:white;"> Download </a></button>
                             
                     </td>
                 </tr>
