--- a/study.html
+++ b/study.html
@@ -474,7 +474,10 @@
                                                         Household identification details
                                                         <ul>
                                                             <li>
-                                                                <p>Survey phase, Area, Cluster code, Household unique ID?</p>
+                                                                <p>Survey phase, Area code, Cluster code?</p>
+                                                            </li>
+															<li>
+                                                                <p>Household unique ID?</p>
                                                             </li>
                                                             <li>
                                                                 <p>Name of the respondent in the household?</p>
@@ -604,7 +607,7 @@
                                                 </div>
                                                 <div id="collapsefive" class="collapse" aria-labelledby="headingfive" data-parent="#accordion" style="">
                                                     <div class="card-body">
-                                                        Socio- Economic Status (House, Water facility, Gas etc.,)
+                                                        Socio Economic Status (SES)
                                                         
                                                             
                                                             <ul>
@@ -641,7 +644,7 @@
                                                 </div>
                                                 <div id="collapsesix" class="collapse" aria-labelledby="headingsix" data-parent="#accordion" style="">
                                                     <div class="card-body">
-                                                        Food/ Housing utilities/ infrequent expenses
+                                                        Food/ Housing utilities/ Infrequent expenses
                                                         <ul>
                                                             <li>
                                                                 <p>How often does your household buy Staple Foods/ Meat/ Diary etc.,?</p>
